--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "auth": "^0.0.9",
     "expo": "~48.0.6",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.6.5",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-native": "0.71.6",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-safe-area-context": "4.5.0",
