--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
   "name": "firebase-rn",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "start": "expo start --dev-client",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -32,7 +31,8 @@
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.10",
     "expo-font": "~11.1.1",
-    "expo-dev-client": "~2.2.1"
+    "expo-dev-client": "~2.2.1",
+    "expo-splash-screen": "~0.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
